--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
               </div>
             </nav>
-            <div class="header__logo"><img src="/img/logo_1.png" alt="" /></div>
+            <div class="header__logo"><img src="./img/logo_1.png" alt="" /></div>
           </div>
         </header>
 
