--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- main content -->
         <div class="main-screen">
           <div class="main-screen__bg">
-            <img src="/img/img_1.png" alt="" />
+            <img src="./img/img_1.png" alt="" />
           </div>
         </div>
         <div class="content">
