--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container">
               <div class="generation__block block">
                 <div class="block__icon">
-                  <img src="/img/icon_1.png" alt="" />
+                  <img src="./img/icon_1.png" alt="" />
                 </div>
                 <h1 class="block__title">A NEW GENERATION OF VINTAGE BIKE</h1>
                 <div class="block__text">
@@ -69,17 +69,17 @@
               <div class="brands__column brands__column_b">
                 <a href="" class="brands__item item">
                   <span class="item__logo">
-                    <img src="/img/logo_2.png" alt="" />
+                    <img src="./img/logo_2.png" alt="" />
                   </span>
                   <span class="item__image ibg">
-                    <img src="/img/img_2.png" alt="" />
+                    <img src="./img/img_2.png" alt="" />
                   </span>
                 </a>
               </div>
               <div class="brands__column">
                 <div class="brands__content block">
                   <div class="block__icon">
-                    <img src="/img/icon_2.png" alt="" />
+                    <img src="./img/icon_2.png" alt="" />
                   </div>
                   <h2 class="block__title">vintage Oliva</h2>
                   <div class="block__text block__text_j">
@@ -91,7 +91,7 @@
                   </div>
                 </div>
                 <div class="brands__image ibg">
-                  <img src="/img/img_3.png" alt="" />
+                  <img src="./img/img_3.png" alt="" />
                 </div>
               </div>
             </div>
@@ -101,17 +101,17 @@
               <div class="brands__column brands__column_b">
                 <a href="" class="brands__item item">
                   <span class="item__logo">
-                    <img src="/img/logo_3.png" alt="" />
+                    <img src="./img/logo_3.png" alt="" />
                   </span>
                   <span class="item__image ibg">
-                    <img src="/img/img_4.png" alt="" />
+                    <img src="./img/img_4.png" alt="" />
                   </span>
                 </a>
               </div>
               <div class="brands__column">
                 <div class="brands__content block">
                   <div class="block__icon">
-                    <img src="/img/icon_3.png" alt="" />
+                    <img src="./img/icon_3.png" alt="" />
                   </div>
                   <h2 class="block__title">La Boriosa</h2>
                   <div class="block__text block__text_j">
@@ -123,7 +123,7 @@
                   </div>
                 </div>
                 <div class="brands__image ibg">
-                  <img src="/img/img_5.png" alt="" />
+                  <img src="./img/img_5.png" alt="" />
                 </div>
               </div>
             </div>
@@ -133,17 +133,17 @@
               <div class="brands__column">
                 <a href="" class="brands__item item">
                   <span class="item__logo">
-                    <img src="/img/logo_4.png" alt="" />
+                    <img src="./img/logo_4.png" alt="" />
                   </span>
                   <span class="item__image ibg">
-                    <img src="/img/img_6.png" alt="" />
+                    <img src="./img/img_6.png" alt="" />
                   </span>
                 </a>
               </div>
               <div class="brands__column">
                 <div class="brands__content block">
                   <div class="block__icon">
-                    <img src="/img/icon_4.png" alt="" />
+                    <img src="./img/icon_4.png" alt="" />
                   </div>
                   <h2 class="block__title">retrò Bike - M. Hulot</h2>
                   <div class="block__text block__text_j">
@@ -155,16 +155,16 @@
                   </div>
                 </div>
                 <div class="brands__image ibg">
-                  <img src="/img/img_7.png" alt="" />
+                  <img src="./img/img_7.png" alt="" />
                 </div>
               </div>
               <div class="brands__column">
                 <div class="brands__item item">
                   <span class="item__logo">
-                    <img src="/img/logo_2.png" alt="" />
+                    <img src="./img/logo_2.png" alt="" />
                   </span>
                   <span class="item__image ibg">
-                    <img src="/img/img_8.png" alt="" />
+                    <img src="./img/img_8.png" alt="" />
                   </span>
                 </div>
               </div>
@@ -175,7 +175,7 @@
               <div class="slider__body">
                 <div class="slider__item">
                   <div class="slider__icon">
-                    <img src="/img/icon_twitter.png" alt="" />
+                    <img src="./img/icon_twitter.png" alt="" />
                   </div>
                   <h3 class="slider__title">
                     AOD New York @aod <span>/ 35 min</span>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="slider__item">
                   <div class="slider__icon">
-                    <img src="/img/icon_twitter.png" alt="" />
+                    <img src="./img/icon_twitter.png" alt="" />
                   </div>
                   <h3 class="slider__title">
                     AOD New York @aod <span>/ 35 min</span>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="slider__item">
                   <div class="slider__icon">
-                    <img src="/img/icon_twitter.png" alt="" />
+                    <img src="./img/icon_twitter.png" alt="" />
                   </div>
                   <h3 class="slider__title">
                     AOD New York @aod <span>/ 35 min</span>
@@ -229,11 +229,11 @@
                         class="block-shop__item block-shop__item_l item"
                       >
                         <span class="item__logo">
-                          <img src="/img/icon_5.png" alt="" />
+                          <img src="./img/icon_5.png" alt="" />
                           <span>Shop now</span>
                         </span>
                         <span class="item__image ibg">
-                          <img src="/img/img_9.png" alt="" />
+                          <img src="./img/img_9.png" alt="" />
                         </span>
                       </a>
                     </div>
@@ -243,22 +243,22 @@
                         class="block-shop__item block-shop__item_l item"
                       >
                         <span class="item__logo">
-                          <img src="/img/icon_5.png" alt="" />
+                          <img src="./img/icon_5.png" alt="" />
                           <span>Shop now</span>
                         </span>
                         <span class="item__image ibg">
-                          <img src="/img/img_10.png" alt="" />
+                          <img src="./img/img_10.png" alt="" />
                         </span>
                       </a>
                     </div>
                   </div>
                   <a href="" class="block-shop__item item">
                     <span class="item__logo">
-                      <img src="/img/icon_5.png" alt="" />
+                      <img src="./img/icon_5.png" alt="" />
                       <span>Shop now</span>
                     </span>
                     <span class="item__image ibg">
-                      <img src="/img/img_11.png" alt="" />
+                      <img src="./img/img_11.png" alt="" />
                     </span>
                   </a>
                 </div>
@@ -266,22 +266,22 @@
               <div class="shop__column">
                 <a href="" class="block-shop__item block-shop__item_b item">
                   <span class="item__logo">
-                    <img src="/img/icon_5.png" alt="" />
+                    <img src="./img/icon_5.png" alt="" />
                     <span>Shop now</span>
                   </span>
                   <span class="item__image ibg">
-                    <img src="/img/img_12.png" alt="" />
+                    <img src="./img/img_12.png" alt="" />
                   </span>
                 </a>
               </div>
               <div class="shop__column">
                 <a href="" class="block-shop__item block-shop__item_b item">
                   <span class="item__logo">
-                    <img src="/img/icon_5.png" alt="" />
+                    <img src="./img/icon_5.png" alt="" />
                     <span>Shop now</span>
                   </span>
                   <span class="item__image ibg">
-                    <img src="/img/img_13.png" alt="" />
+                    <img src="./img/img_13.png" alt="" />
                   </span>
                 </a>
               </div>
@@ -289,11 +289,11 @@
                 <div class="shop__block block-shop">
                   <a href="" class="block-shop__item item">
                     <span class="item__logo">
-                      <img src="/img/icon_5.png" alt="" />
+                      <img src="./img/icon_5.png" alt="" />
                       <span>Shop now</span>
                     </span>
                     <span class="item__image ibg">
-                      <img src="/img/img_16.png" alt="" />
+                      <img src="./img/img_16.png" alt="" />
                     </span>
                   </a>
                   <div class="block-shop__row">
@@ -303,11 +303,11 @@
                         class="block-shop__item block-shop__item_l item"
                       >
                         <span class="item__logo">
-                          <img src="/img/icon_5.png" alt="" />
+                          <img src="./img/icon_5.png" alt="" />
                           <span>Shop now</span>
                         </span>
                         <span class="item__image ibg">
-                          <img src="/img/img_14.png" alt="" />
+                          <img src="./img/img_14.png" alt="" />
                         </span>
                       </a>
                     </div>
@@ -317,11 +317,11 @@
                         class="block-shop__item block-shop__item_l item"
                       >
                         <span class="item__logo">
-                          <img src="/img/icon_5.png" alt="" />
+                          <img src="./img/icon_5.png" alt="" />
                           <span>Shop now</span>
                         </span>
                         <span class="item__image ibg">
-                          <img src="/img/img_15.png" alt="" />
+                          <img src="./img/img_15.png" alt="" />
                         </span>
                       </a>
                     </div>
@@ -339,7 +339,7 @@
             <div class="container">
               <div class="subscribe__body">
                 <div class="subscribe__logo">
-                  <img src="/img/logo_1.png" alt="" />
+                  <img src="./img/logo_1.png" alt="" />
                 </div>
                 <div class="subscribe__label">Stay on the saddle!</div>
                 <form action="#" class="subscribe__form">
@@ -374,11 +374,11 @@
                 <div class="footer__column">
                   <div class="footer__social social">
                     <a href="" class="social__link"
-                      ><img src="/img/icon_social_facebook.png" alt="" /></a
+                      ><img src="./img/icon_social_facebook.png" alt="" /></a
                     ><a href="" class="social__link"
-                      ><img src="/img/icon_social_pinterest.png" alt="" /></a
+                      ><img src="./img/icon_social_pinterest.png" alt="" /></a
                     ><a href="" class="social__link"
-                      ><img src="/img/icon_social_twitter.png" alt=""
+                      ><img src="./img/icon_social_twitter.png" alt=""
                     /></a>
                   </div>
                 </div>
@@ -386,7 +386,7 @@
                   <a class="footer__dev dev">
                     <span class="dev__text">Handcrafted by</span
                     ><span class="dev__icon"
-                      ><img src="/img/yebo_logo.png " alt=""
+                      ><img src="./img/yebo_logo.png " alt=""
                     /></span>
                   </a>
                 </div>
